# UBI-Engine

./: .gitignore  Cargo.toml  README.md
extras/: ECS-ideas.txt  code-struct.txt  events-enum  next-steps.txt  winit.txt
sandbox/: Cargo.toml
sandbox/src/: main  main.rs
src/: .frag  .vert  lib.rs  macros.rs  main.rs  objects.rs  prelude.rs  transform.rs  windsdl.rs
src/core/: custom_error.rs  mod.rs
src/core/application/: application.rs
src/event/: application_event.rs  event.rs  key_event.rs  mod.rs
src/graphics/: mod.rs  objects.rs  render.rs  shader.rs  texture.rs  windsdl.rs
src/graphics/window/: mod.rs  window_trait.rs
src/window/: mod.rs  wind_winit.rs  window_trait.rs  windsdl.rs
ubi/: Cargo.toml
ubi/src/: layer.rs  lib.rs  prelude.rs
ubi/src/core/: custom_error.rs
ubi/src/core/application/: application.rs
ubi/src/core/math/: transform.rs
ubi/src/egui/: egui_event_mapper.rs  egui_layer.rs  mod.rs
ubi/src/event/: event.rs  event_data.rs  key_event.rs  mod.rs  mouse_event.rs  tg.rs
ubi/src/graphics/: buffer.rs  mod.rs  render.rs  shader.rs
ubi/src/layer/: layer.rs  mod.rs
ubi/src/window/: wind_sdl.rs  window_trait.rs
