[package]
name = "ubi"
version = "0.1.0"
edition = "2021"
publish = true

[dependencies]
gl = '*'
sdl2 = { version = '*', features = ["bundled"]}
image = "0.24"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
bitflags = "2.4"

winit = "0.29"
glutin = "0.31"
raw-window-handle = "0.6"

[workspace]
members = [
    "sandbox",
    "."
]

