[package]
name = "ubi"
version = "0.1.0"
edition = "2021"
publish = true

[dependencies]
gl = '*'
sdl2 = { version = '*', features = ["bundled"]}
image = "0.24"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
bitflags = "2.4"

raw-window-handle = "0.6"
winit = "0.30.0"
glutin =  "0.32.0"
glutin-winit = "0.5.0"

[workspace]
members = [
    "sandbox",
    "."
]

